# game

./: .gitignore  CMakeLists.txt  Global.h  game.cpp  testing.h  tutorial.txt
GameLogic/logic/: gameEngine.h
GameLogic/logic/snake/: snake.cpp  snake.h
GameLogic/videoGen/: videoGen.cpp  videoGen.h
STD code test/: Makefile  basic  basic.cpp  caster.h  copytest  copytest.cpp  main  main.cpp
STD code test/videoGeneration/: CMakeLists.txt  Makefile  a.out  main.cpp  saveFrame.txt  vgaMockup.h  vgamockup.cpp
STD code test/videoGeneration/mockupVGAout/: vgaMockup.cpp  vgaMockup.h  vgaSaveFirstFrame.cpp  vgaSaveFirstFrame.h  vgaSaveNthFrame.cpp  vgaSaveNthFrame.h
controll/: SDCard.cpp  SDCard.h  spi.cpp  spi.h  spiPorts.cpp  spiPorts.h
debug/: mix.cpp  mix.h  printer.cpp  printer.h
errorCheck/: basicError.cpp  basicError.h
hardware/: vga conn.asc  vga conn.net  vga conn.op.raw  vga conn.raw
input/: Stick.cpp
input/include/: PS2.h  Stick.h
pio/: config.cpp  config.h  hello.pio  pio.h
pio/vga/: hvga.h  hvga.pio  vga.cpp  vga.h  video.h  video.pio  vvga.h  vvga.pio
sprites/: blank.h  caster.h  defender.h  generateToCArray.py  guard.h  medic.h  sniper.h  solid.h  specialist.h  supporter.h  vanguard.h
vga/: Ivga.h  vga.cpp  vga.h
video/: video.cpp  video.h
